k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-app-service
spec:
  selector:
    app: crud-app
  ports:
    - protocol: TCP
      port: 8080        # Port exposed by the service
      targetPort: 8080 # Port on which the app is running inside the container
