k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-crud-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crud-app-service
                port:
                  number: 8080
